--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,21 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+/* .test{
+  width: 80%;
+  margin: 0 auto;
+}
+.main{
+  padding: 10px;
+  margin: 0 auto;
+  width: 30%;
+} */
+
