--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,21 @@ code {
     monospace;
 }
 
+@media (max-width: 700px) { 
+  .thercard {
+  display: grid;
+  grid-template-columns: 1fr;
+  flex-grow: 1;
+  margin: 0 70px;
+  }
+  } 
+
+
+/* @media screen and (min-width: 400px) {
+  a>.thercard {
+    color:brown;
+  }
+} */
 /* .test{
   width: 80%;
   margin: 0 auto;
