--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,66 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+footer {
+  position:fixed;
+  bottom:0;
+  width:100%;
+}
+
+.test {
+  transition: .4s;
+  }
+  .test:hover {
+  transition: .4s;
+  background-color: rgba(0,43,54, 0.4) ;
+  border-radius: 20%;
+  }
+  .thercard {
+    transition: .4s;
+    }
+    .thercard:hover {
+    transition: .4s;
+    background-color: rgba(142,160,164, 0.1) ;
+    /* border-radius: 100%; */
+    }
+/* 
+  .thercard {
+    &:hover {
+      box-shadow: 0 8px 17px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+      transition: all .55s ease-in-out;
+    }
+  } */
+
+@media (max-width: 700px) { 
+  .thercard {
+  display: grid;
+  grid-template-columns: 1fr;
+  flex-grow: 1;
+  margin: 0 70px;
+
+  }
+  } 
+
+
+/* @media screen and (min-width: 400px) {
+  a>.thercard {
+    color:brown;
+  }
+} */
+/* .test{
+  width: 80%;
+  margin: 0 auto;
+}
+.main{
+  padding: 10px;
+  margin: 0 auto;
+  width: 30%;
+} */
+
