--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  
+  margin-right: -12px;
 }
 
 code {
@@ -36,6 +36,30 @@ code {
       transition: all .55s ease-in-out;
     }
   } */
+
+/* .carousel-inner {
+  width: 60%;
+  height: 60%;
+} */
+
+.carousel-item{
+  width: 100%; /*width you want*/
+  height: 500px; /*height you want*/
+  overflow: hidden;
+}
+.carousel-item img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+footer {
+  position:fixed;
+  bottom:0;
+  width:100%;
+}
+
+
 
 @media (max-width: 700px) { 
   .thercard {
