--- a/src/index.css
+++ b/src/index.css
@@ -55,9 +55,9 @@ code {
 }
 
 footer {
-  position:fixed;
-  bottom:0;
-  width:100%;
+  /* position: fixed; */
+  bottom: 0;
+  width: 100%;
 }
 
 @media (max-width: 700px) { 
@@ -66,9 +66,8 @@ footer {
   grid-template-columns: 1fr;
   flex-grow: 1;
   margin: 0 70px;
-
   }
-  } 
+} 
 
 
 /* @media screen and (min-width: 400px) {
